完成全部程序 5.1 v2 程序修改为TPU

--- a/Word2Feature.ipynb
+++ b/Word2Feature.ipynb
@@ -15,8 +15,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
+        {
+          "name": "stderr",
+          "text": [
+            "D:\\OneDrive - stu.csust.edu.cn\\code\\python\\毕设\\Until.py:364: RuntimeWarning: overflow encountered in ubyte_scalars\n  M \u003d image[i,j-1]+image[i,j]+image[i,j+1] if 0\u003cj\u003cw-1 else 1\nD:\\OneDrive - stu.csust.edu.cn\\code\\python\\毕设\\Until.py:388: RuntimeWarning: overflow encountered in ubyte_scalars\n  M \u003d image[i-1,j]+image[i,j]+image[i+1,j] if 0\u003ci\u003ch-1 else 1\n"
+          ],
+          "output_type": "stream"
+        },
         {
           "data": {
             "text/plain": "\u003cFigure size 432x288 with 3 Axes\u003e",
